--- a/GTICS_LAB9_20210779/src/main/resources/application.properties
+++ b/GTICS_LAB9_20210779/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=GTICS_LAB9_20210779
-spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.datasource.url=jdbc:mysql://localhost:3306/teledrink
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
